scenario2/k8s/checkit-secret-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: checkit
  labels:
    name: checkit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: checkit
  template:
    metadata:
      labels:
        app: checkit
    spec:
      containers:
      - name: checkit
        image: gcr.io/___PROJECTID___/checkit:1.1
        imagePullPolicy: Always
        volumeMounts:
        - name: checkit-secret-vol
          mountPath: "/config/checkit"
          readOnly: true
        ports:
        - containerPort: 8080
      volumes:
      - name: checkit-secret-vol
        secret:
          secretName: checkit-secret
